Link fixes in changelog

--- a/changelog/2025/2025-10-22-ai.md
+++ b/changelog/2025/2025-10-22-ai.md
@@ -23,40 +23,40 @@ We added a new API for managing and communicating with AI agents.
 
 | Endpoint                                                                                                                                                                                             | Description                                     |
 |------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------|
-| [Starting agent chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat)                            | It allows chatting with AI agents.                |
-| [Starting agent async chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat-async)                | It allows chatting with AI agents asynchronously. |
-| [Listing available agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-list-templates)            | It retrieves all agent templates.               |
-| [Searching agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-search-templates)                 | It searches for agent templates.                  |
-| [Creating agent instance based on a template](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-clone-template) | It creates a new agent based on the selected template.    |
-| [Listing agents](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-list-agents)                                  | It retrieves all agents.                         |
-| [Searching agents](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-search-agents)                             | It searches for agents.                          |
-| [Retrieving agent by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-retrieve-agent)                       | It retrieves details of an agent by its ID.                           |
-| [Upserting agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#put-ai-upsert-agent)                                | It creates or updates an agent.                             |
-| [Partially updating agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#patch-ai-update-agent)                     | It partially updates an agent.                   |
-| [Deleting agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#delete-ai-delete-agent)                              | It deletes an agent.                             |
-| [Listing available jobs](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#get-ai-list-jobs)                                | It retrieves all agent jobs.                     |
-| [Searching jobs](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#post-ai-search-jobs)                                     | It searches for agent jobs.                      |
-| [Retrieving available job](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#get-ai-retrieve-job)                           | It retrieves an agent job.                       |
-| [Deleting a job](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#delete-ai-delete-job)                                    | It deletes an agent job.                         |
-| [Listing commerce events](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/commerce-events#GET-ai-list-commerce-events)        | It retrieves a list of commerce events.                         |
-| [Listing MCP servers](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-list-mcp-servers)                     | It retrieves all MCP servers.                    |
-| [Searching MCP servers](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#post-ai-search-mcp-servers)                | It searches for MCP servers.                     |
-| [Retrieving MCP server by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-retrieve-mcp-server)          | It retrieves an MCP server.                      |
-| [Upserting MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#put-ai-upsert-mcp-server)                   | It upserts an MCP server.                         |
-| [Partially updating MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#patch-ai-update-mcp-server)        | It partially updates an MCP server.               |
-| [Deleting MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#delete-ai-delete-mcp-server)                 | It deletes an MCP server.                         |
-| [Listing tokens](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#get-ai-list-tokens)                                    | It retrieves all AI tokens.                         |
-| [Searching tokens](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#post-ai-search-tokens)                               | It searches for AI tokens.                          |
-| [Retrieving token by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#get-ai-retrieve-token)                         | It retrieves a token by its ID.                            |
-| [Upserting token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#put-ai-upsert-token)                                  | It creates or updates an AI token.                              |
-| [Partially updating token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#patch-ai-update-token)                       | It partially updates an AI token.                    |
-| [Deleting token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#delete-ai-delete-token)                                | It deletes an AI token.                              |
-| [Listing tools](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#get-ai-list-tools)                                       | It retrieves all AI tools.                          |
-| [Searching tools](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#post-ai-search-tools)                                  | It searches for AI tools.                           |
-| [Retrieving tool by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#get-ai-retrieve-tool)                            | It retrieves an AI tool.                             |
-| [Upserting tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#put-ai-upsert-tool)                                     | It creates or updates an AI tool.                               |
-| [Partially updating tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#patch-ai-update-tool)                          | It partially updates an AI tool.                     |
-| [Deleting tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#delete-ai-delete-tool)                                   | It deletes an AI tool.                               |
+| [Starting agent chat](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent-chat#post-ai-service-tenant-agentic-chat)                            | It allows chatting with AI agents.                |
+| [Starting agent async chat](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent-chat#post-ai-service-tenant-agentic-chat-async)                | It allows chatting with AI agents asynchronously. |
+| [Listing available agent templates](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent-template#get-ai-service-tenant-agentic-templates)            | It retrieves all agent templates.               |
+| [Searching agent templates](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent-template#post-ai-service-tenant-agentic-templates-search)                 | It searches for agent templates.                  |
+| [Creating agent instance based on a template](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent-template#post-ai-service-tenant-agentic-templates-templateid-agent) | It creates a new agent based on the selected template.    |
+| [Listing agents](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent#get-ai-service-tenant-agentic-agents)                                  | It retrieves all agents.                         |
+| [Searching agents](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent#post-ai-service-tenant-agentic-agents-search)                             | It searches for agents.                          |
+| [Retrieving agent by ID](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent#get-ai-service-tenant-agentic-agents-agentid)                       | It retrieves details of an agent by its ID.                           |
+| [Upserting agent](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent#put-ai-service-tenant-agentic-agents-agentid)                                | It creates or updates an agent.                             |
+| [Partially updating agent](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent#patch-ai-service-tenant-agentic-agents-agentid)                     | It partially updates an agent.                   |
+| [Deleting agent](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent#delete-ai-service-tenant-agentic-agents-agentid)                              | It deletes an agent.                             |
+| [Listing available jobs](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#get-ai-service-tenant-jobs)                                | It retrieves all agent jobs.                     |
+| [Searching jobs](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#post-ai-service-tenant-jobs-search)                                     | It searches for agent jobs.                      |
+| [Retrieving available job](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#get-ai-service-tenant-jobs-jobid)                           | It retrieves an agent job.                       |
+| [Deleting a job](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#delete-ai-service-tenant-jobs-jobid)                                    | It deletes an agent job.                         |
+| [Listing commerce events](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/commerce-events#GET-ai-list-commerce-events)        | It retrieves a list of commerce events.                         |
+| [Listing MCP servers](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-service-tenant-agentic-mcp-servers)                     | It retrieves all MCP servers.                    |
+| [Searching MCP servers](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#post-ai-service-tenant-agentic-mcp-servers-search)                | It searches for MCP servers.                     |
+| [Retrieving MCP server by ID](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-service-tenant-agentic-mcp-servers-mcpserverid)          | It retrieves an MCP server.                      |
+| [Upserting MCP server](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#put-ai-service-tenant-agentic-mcp-servers-mcpserverid)                   | It upserts an MCP server.                         |
+| [Partially updating MCP server](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#patch-ai-service-tenant-agentic-mcp-servers-mcpserverid)        | It partially updates an MCP server.               |
+| [Deleting MCP server](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#delete-ai-service-tenant-agentic-mcp-servers-mcpserverid)                 | It deletes an MCP server.                         |
+| [Listing tokens](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/token#get-ai-service-tenant-agentic-tokens)                                    | It retrieves all AI tokens.                         |
+| [Searching tokens](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/token#post-ai-service-tenant-agentic-tokens-search)                               | It searches for AI tokens.                          |
+| [Retrieving token by ID](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/token#get-ai-service-tenant-agentic-tokens-tokenid)                         | It retrieves a token by its ID.                            |
+| [Upserting token](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/token#put-ai-service-tenant-agentic-tokens-tokenid)                                  | It creates or updates an AI token.                              |
+| [Partially updating token](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/token#patch-ai-service-tenant-agentic-tokens-tokenid)                       | It partially updates an AI token.                    |
+| [Deleting token](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/token#delete-ai-service-tenant-agentic-tokens-tokenid)                                | It deletes an AI token.                              |
+| [Listing tools](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#get-ai-service-tenant-agentic-tools)                                       | It retrieves all AI tools.                          |
+| [Searching tools](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#post-ai-service-tenant-agentic-tools-search)                                  | It searches for AI tools.                           |
+| [Retrieving tool by ID](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#get-ai-service-tenant-agentic-tools-toolid)                            | It retrieves an AI tool.                             |
+| [Upserting tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#put-ai-service-tenant-agentic-tools-toolid)                                     | It creates or updates an AI tool.                               |
+| [Partially updating tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#patch-ai-service-tenant-agentic-tools-toolid)                          | It partially updates an AI tool.                     |
+| [Deleting tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#delete-ai-service-tenant-agentic-tools-toolid)                                   | It deletes an AI tool.                               |
 
 ## Known problems
 
