--- a/changelog/2025/2025-10-24-quote.md
+++ b/changelog/2025/2025-10-24-quote.md
@@ -21,7 +21,7 @@ The Quote Service has been extended to support external prices and mixins on pro
 
 Key changes:
 - A product can be added to quote more than once
-- Added support Quote creation from carts with external products and prices
+- Added support for the quote creation from carts with external products and prices
 - Added support for external prices with the `type` field (INTERNAL/EXTERNAL) on price objects
 - Added mixins and metadata support on both product and item levels
 - Added new scope requirement `cart.cart_manage_external_prices` for external prices
