COP-4026 search endpoints and new referene types

--- a/changelog/2025/2025-10-30-schema.md
+++ b/changelog/2025/2025-10-30-schema.md
@@ -19,7 +19,7 @@ layout:
 
 The Schema Service has been enhanced with support for references. These updates include:
 
-* New `REFERENCE` mixin schema attribute type for custom schema types, allowing references to products, orders, carts, customers, media, prices and other custom schema types.
+* New `REFERENCE` mixin schema attribute type for custom schema types, allowing references to products, orders, carts, customers, media, prices, price lists, customer segments, categories and other custom schema types.
 * New `validateReferences` query parameter to control reference validation during create, upsert, and patch operations.
 * New `expand` query parameter to retrieve expanded reference data.
 * New `media` field in custom instance responses containing IDs of media assigned to the custom instance.
