COP-4241 review improvements

--- a/changelog/2025/2025-11-10-ai.md
+++ b/changelog/2025/2025-11-10-ai.md
@@ -13,27 +13,27 @@ layout:
     visible: true
 ---
 
-# 2025-11-10: AI Service - Export/Import agents
+# 2025-11-10: AI Service - Import/Export agents
 
 ## Overview
 
-We added a new API for exporting and importing AI agents.
+We added a new API for importing and exporting AI agents.
 We also extended the jobs API with the new fields `type`, 'exportResult' and `importResult`.
 
 ## Added endpoints
 
-| Endpoint                                                                                                                                                     | Description                    |
-|--------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------|
-| [Exporting agents](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent-chat#post-ai-export-agents) | It allows exporting AI agents. |
-| [Importing agents](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent-chat#post-ai-import-agents) | It allows importing AI agents. |
+| Endpoint                                                                                                                                                                               | Description                    |
+|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------|
+| [Importing agents](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/import-export#post-ai-service-tenant-agentic-agents-import) | It allows importing AI agents. |
+| [Exporting agents](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/import-export#post-ai-service-tenant-agentic-agents-export) | It allows exporting AI agents. |
 
 ## Modified endpoints
 
-| Endpoint                                                                                                                                                      | Description                                                                                |
-|---------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------|
-| [Listing available jobs](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent-chat#get-ai-list-jobs) | New fields have been added to the Job response: `type`, 'exportResult' and `importResult`. |
-| [Searching jobs](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent-chat#post-ai-search-jobs)      | New fields have been added to the Job response: `type`, 'exportResult' and `importResult`. |
-| [Retrieving available job](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent-chat#get-ai-job)     | New fields have been added to the Job response: `type`, 'exportResult' and `importResult`. |
+| Endpoint                                                                                                                                                                 | Description                                                                                |
+|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------|
+| [Listing available jobs](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#get-ai-service-tenant-jobs)         | New fields have been added to the Job response: `type`, 'exportResult' and `importResult`. |
+| [Searching jobs](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#post-ai-service-tenant-jobs-search)         | New fields have been added to the Job response: `type`, 'exportResult' and `importResult`. |
+| [Retrieving available job](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#get-ai-service-tenant-jobs-jobid) | New fields have been added to the Job response: `type`, 'exportResult' and `importResult`. |
 
 ## Known problems
 
