--- a/changelog/2025/2025-11-17-ai.md
+++ b/changelog/2025/2025-11-17-ai.md
@@ -20,7 +20,8 @@ layout:
 Added a new API for importing and exporting AI agents and improved the existing APIs.
 
 ## New attributes
-- Extended the Jobs API with new fields: `type`, `exportResult`, and `importResult`.
+
+- Extended the jobs API with new fields: `type`, `exportResult`, and `importResult`.
 - Introduced a `force` query parameter for the delete endpoints of agents, tools, tokens, and MCP servers.
 - Added the `enabled` field to the responses of tools and MCP servers.
 
@@ -33,25 +34,25 @@ Added a new API for importing and exporting AI agents and improved the existing 
 
 ## Modified endpoints
 
-| Endpoint                                                                                                                                                                                                    | Description                                                                                                            |
-|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------|
-| [Listing available jobs](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#get-ai-service-tenant-jobs)                                            | New fields have been added to the Job response: `type`, 'exportResult' and `importResult`.                             |
-| [Searching jobs](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#post-ai-service-tenant-jobs-search)                                            | New fields have been added to the Job response: `type`, 'exportResult' and `importResult`.                             |
-| [Retrieving available job](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#get-ai-service-tenant-jobs-jobid)                                    | New fields have been added to the Job response: `type`, 'exportResult' and `importResult`.                             |
-| [Deleting agent](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent#delete-ai-service-tenant-agentic-agents-agentid)                             | New `force` query parameter has been added which allows to delete agent which is used as collaboration agent.          |
-| [Deleting tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#delete-ai-service-tenant-agentic-tools-toolid)                                 | New `force` query parameter has been added which allows to delete tool which is used by agents.                        |
-| [Deleting token](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/token#delete-ai-service-tenant-agentic-tokens-tokenid)                             | New `force` query parameter has been added which allows to delete token which is used by agents, tools or MCP servers. |
-| [Deleting MCP server](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#delete-ai-service-tenant-agentic-mcp-servers-mcpserverid)          | New `force` query parameter has been added which allows to delete custom MCP server which is used by agents.           |
-| [Listing tools](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#get-ai-service-tenant-agentic-tools)                                           | New `enabled` filed has been added to the Tool response.                                                               |
-| [Searching tools](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#post-ai-service-tenant-agentic-tools-search)                                 | New `enabled` filed has been added to the Tool response.                                                               |
-| [Retrieving tool by ID](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#get-ai-service-tenant-agentic-tools-toolid)                            | New `enabled` filed has been added to the Tool response.                                                               |
-| [Upserting tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#put-ai-service-tenant-agentic-tools-toolid)                                   | New `enabled` filed has been added to the Tool payload.                                                                |
-| [Partially updating tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#patch-ai-service-tenant-agentic-tools-toolid)                        | New `enabled` filed has been added to the Tool payload.                                                                |
-| [Listing MCP servers](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-service-tenant-agentic-mcp-servers)                         | New `enabled` filed has been added to the MCP server response.                                                         |
-| [Searching MCP servers](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#post-ai-service-tenant-agentic-mcp-servers-search)               | New `enabled` filed has been added to the MCP server response.                                                         |
-| [Retrieving MCP server by ID](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-service-tenant-agentic-mcp-servers-mcpserverid)     | New `enabled` filed has been added to the MCP server response.                                                         |
-| [Upserting MCP server](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#put-ai-service-tenant-agentic-mcp-servers-mcpserverid)            | New `enabled` filed has been added to the MCP server payload.                                                          |
-| [Partially updating MCP server](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#patch-ai-service-tenant-agentic-mcp-servers-mcpserverid) | New `enabled` filed has been added to the MCP server payload.                                                          |
+| Endpoint                                                                                                                                                                                                    | Description                                                                                                                |
+|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------|
+| [Listing available jobs](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#get-ai-service-tenant-jobs)                                            | New fields have been added to the job response: `type`, 'exportResult' and `importResult`.                                 |
+| [Searching jobs](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#post-ai-service-tenant-jobs-search)                                            | New fields have been added to the job response: `type`, 'exportResult' and `importResult`.                                 |
+| [Retrieving available job](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/job#get-ai-service-tenant-jobs-jobid)                                    | New fields have been added to the job response: `type`, 'exportResult' and `importResult`.                                 |
+| [Deleting agent](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/agent#delete-ai-service-tenant-agentic-agents-agentid)                             | New `force` query parameter has been added which allows you to delete agent which is used as collaboration agent.          |
+| [Deleting tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#delete-ai-service-tenant-agentic-tools-toolid)                                 | New `force` query parameter has been added which allows you to delete tool which is used by agents.                        |
+| [Deleting token](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/token#delete-ai-service-tenant-agentic-tokens-tokenid)                             | New `force` query parameter has been added which allows you to delete token which is used by agents, tools or MCP servers. |
+| [Deleting MCP server](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#delete-ai-service-tenant-agentic-mcp-servers-mcpserverid)          | New `force` query parameter has been added which allows you to delete custom MCP server which is used by agents.           |
+| [Listing tools](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#get-ai-service-tenant-agentic-tools)                                           | New `enabled` field has been added to the Tool response.                                                                   |
+| [Searching tools](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#post-ai-service-tenant-agentic-tools-search)                                 | New `enabled` field has been added to the Tool response.                                                                   |
+| [Retrieving tool by ID](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#get-ai-service-tenant-agentic-tools-toolid)                            | New `enabled` field has been added to the Tool response.                                                                   |
+| [Upserting tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#put-ai-service-tenant-agentic-tools-toolid)                                   | New `enabled` field has been added to the Tool payload.                                                                    |
+| [Partially updating tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#patch-ai-service-tenant-agentic-tools-toolid)                        | New `enabled` field has been added to the Tool payload.                                                                    |
+| [Listing MCP servers](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-service-tenant-agentic-mcp-servers)                         | New `enabled` field has been added to the MCP server response.                                                             |
+| [Searching MCP servers](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#post-ai-service-tenant-agentic-mcp-servers-search)               | New `enabled` field has been added to the MCP server response.                                                             |
+| [Retrieving MCP server by ID](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-service-tenant-agentic-mcp-servers-mcpserverid)     | New `enabled` field has been added to the MCP server response.                                                             |
+| [Upserting MCP server](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#put-ai-service-tenant-agentic-mcp-servers-mcpserverid)            | New `enabled` field has been added to the MCP server payload.                                                              |
+| [Partially updating MCP server](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/mcp-server#patch-ai-service-tenant-agentic-mcp-servers-mcpserverid) | New `enabled` field has been added to the MCP server payload.                                                              |
 
 ## Known problems
 
