classification events - webhooks update

--- a/changelog/2025/2025-11-25-webhook.md
+++ b/changelog/2025/2025-11-25-webhook.md
@@ -13,7 +13,7 @@ layout:
     visible: true
 ---
 
-# 2025-11-25: Webhook Service - update category event schema
+# 2025-11-25: Webhook Events - updated category event schema
 
 ## Overview
 
@@ -23,8 +23,8 @@ Category event schemas were updated to include support for classification catego
 
 | Event                  | Description                                                                           |
 |------------------------|---------------------------------------------------------------------------------------|
-| `category.created`     | Support for `ownClassificationMixins` and `classificationMixins` added.     |
-| `category.updated`     | Support for `ownClassificationMixins` and `classificationMixins` added.     |
+| `category.created`     | Support for `classificationMixins` added.     |
+| `category.updated`     | Support for `classificationMixinsBefore` and `classificationMixinsAfter` added.     |
 
 ## Known problems
 
