COP-4223 change classifications stuff

--- a/changelog/2025/2025-11-25-category.md
+++ b/changelog/2025/2025-11-25-category.md
@@ -27,7 +27,7 @@ Categories can now be designated as either `STANDARD` (default) or `CLASSIFICATI
 
 A new `type` field has been added to the category model with the following values:
 - `STANDARD` - Regular category (default behavior)
-- `CLASSIFICATION` - Category that can define classification mixins for product classification
+- `CLASSIFICATION` - Category that can define classification mixins for product classification. The category of type CLASSIFICATION must have category code defined.
 
 ### Classification mixins
 
@@ -48,6 +48,7 @@ Classification categories support two new fields:
 **ClassificationMixin (response only):**
 - Includes all fields from OwnClassificationMixin
 - `sourceCategoryId` - ID of the category where the mixin is defined
+- `mixinPath` - The mixins path that should be used when defining attributes on a product It's built based od following patter `class_<sourceCategory.code>_<name>`
 
 ## Updated endpoints
 
@@ -113,12 +114,14 @@ When retrieving a classification category that has parent classification categor
   "classificationMixins": [
     {
       "name": "toolsClassification",
+      "mixinPath": "class_EA673_toolsClassification",
       "schemaUrl": "https://res.cloudinary.com/saas-ag/raw/upload/emporix-docs/toolsClassification_v1.json",
       "required": false,
       "sourceCategoryId": "7d2b0d76-3628-46b3-ac92-34c903f5c3cb"
     },
     {
-      "name": "cordedToolsClassification",
+      "name": "cordedToolsClassification", 
+      "mixinPath": "class_EA677_cordedToolsClassification",
       "schemaUrl": "https://res.cloudinary.com/saas-ag/raw/upload/emporix-docs/cordedTools_v1.json",
       "required": false,
       "sourceCategoryId": "0720b75e-ee1c-4d76-9f53-eb3af3927e13"
