--- a/changelog/2025/2025-11-25-webhook.md
+++ b/changelog/2025/2025-11-25-webhook.md
@@ -21,10 +21,11 @@ Category event schemas were updated to include support for classification catego
 
 ## Added new fields
 
-| Event                  | Description                                                                           |
-|------------------------|---------------------------------------------------------------------------------------|
-| `category.created`     | Support for `classificationMixins` added.     |
-| `category.updated`     | Support for `classificationMixinsBefore` and `classificationMixinsAfter` added.     |
+| Event                | Description                                                                     |
+|----------------------|---------------------------------------------------------------------------------|
+| `category.created`   | Support for `classificationMixins` added.                                       |
+| `category.updated`   | Support for `classificationMixinsBefore` and `classificationMixinsAfter` added. |
+| `assignment.created` | Support for `classificationMixins` added.                                       |
 
 ## Known problems
 
