--- a/changelog/2025/2025-11-27-category.md
+++ b/changelog/2025/2025-11-27-category.md
@@ -13,7 +13,7 @@ layout:
     visible: true
 ---
 
-# 2025-11-25: Category Service - classification categories
+# 2025-11-27: Category Service - classification categories
 
 ## Overview
 
@@ -27,7 +27,7 @@ Categories can now be designated as either `STANDARD` (default) or `CLASSIFICATI
 
 A new `type` field has been added to the category model with the following values:
 - `STANDARD` - Regular category (default behavior)
-- `CLASSIFICATION` - Category that can define classification mixins for product classification. The category of type CLASSIFICATION must have category code defined.
+- `CLASSIFICATION` - Category that can define classification mixins for product classification. The category of type `CLASSIFICATION` must have category code defined.
 
 ### Classification mixins
 
@@ -48,7 +48,7 @@ Classification categories support two new fields:
 **ClassificationMixin (response only):**
 - Includes all fields from OwnClassificationMixin
 - `sourceCategoryId` - ID of the category where the mixin is defined
-- `mixinPath` - The mixins path that should be used when defining attributes on a product It's built based od following patter `class_<sourceCategory.code>_<name>`
+- `mixinPath` - The mixins path that should be used when defining attributes on a product. It's built based on the following pattern: `class_<sourceCategory.code>_<name>`.
 
 ## Updated endpoints
 
