--- a/changelog/2025/2025-12-11-category.md
+++ b/changelog/2025/2025-12-11-category.md
@@ -60,7 +60,7 @@ Classification categories support two new fields:
 | [Retrieving a list of categories](https://developer.emporix.io/api-references/api-guides/catalogs-and-categories/category-tree/api-reference/category-resources#get-category-tenant-categories) | Response now includes `ownClassificationMixins` and `classificationMixins` fields for classification categories. |
 | [Searching for categories](https://developer.emporix.io/api-references/api-guides/catalogs-and-categories/category-tree/api-reference/category-resources#post-category-tenant-categories-search) | Response now includes `ownClassificationMixins` and `classificationMixins` fields for classification categories. |
 
-## Example usage
+## Usage example
 
 ### Creating a classification category
 
