COP-4326 minor improvements

--- a/changelog/2025/2025-12-02-ai.md
+++ b/changelog/2025/2025-12-02-ai.md
@@ -18,7 +18,7 @@ layout:
 ## Overview
 
 The AI Service has been extended to support a new MCP server transport protocol: `streamable_http`. This option enables streamable
-HTTP-based communication between agents and custom MCP server implementations alongside the existing `sse` transport.
+HTTP-based communication between agents and custom MCP server implementations alongside the deprecated `sse` transport protocol.
 
 ## Modified endpoints
 
