--- a/changelog/2025/2025-12-03-ai.md
+++ b/changelog/2025/2025-12-03-ai.md
@@ -19,12 +19,12 @@ layout:
 
 Extended existing API for Native Tools by adding tools of `RAG_CUSTOM` and `RAG_EMPORIX` types which are necessary for performing RAG Search.
 
-## Added endpoints
+## Updated endpoints
 
 | Endpoint                                                                                                                                           | Description                                                         |
 |----------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------|
-| [Upserting tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#PUT-ai-upsert-tool)  | Tools of `RAG_EMPORIX` and `RAG_CUSTOM` types have been introduced. |
-| [Patching tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#PATCH-ai-update-tool) | Tools of `RAG_EMPORIX` and `RAG_CUSTOM` types have been introduced. |
+| [Upserting tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#put-ai-service-tenant-agentic-tools-toolid)  | Tools of `RAG_EMPORIX` and `RAG_CUSTOM` types have been introduced. |
+| [Partially updating tool](https://developer.emporix.io/api-references/api-guides/artificial-intelligence/ai-service/api-reference/tool#patch-ai-service-tenant-agentic-tools-toolid) | Tools of `RAG_EMPORIX` and `RAG_CUSTOM` types have been introduced. |
 
 ## Known problems
 
