COP-4347 review improvements

--- a/changelog/2025/2025-12-05-ai.md
+++ b/changelog/2025/2025-12-05-ai.md
@@ -13,11 +13,11 @@ layout:
     visible: true
 ---
 
-# 2025-12-05: AI Service - support for VLLM provider
+# 2025-12-05: AI Service - support for vLLM provider
 
 ## Overview
 
-Extended existing API for Agents by adding LLM provider of `self_hosted_vllm` type which supports self deployed VLLM.
+Extended existing API for Agents by adding LLM provider of `self_hosted_vllm` type which supports self deployed vLLM.
 
 ## Updated endpoints
 
