COP-4225 add underscore

--- a/changelog/2025/2025-11-27-category.md
+++ b/changelog/2025/2025-11-27-category.md
@@ -41,7 +41,7 @@ Classification categories support two new fields:
 ### Schema structure
 
 **OwnClassificationMixin:**
-- `name` - Name of the mixin (pattern: `^[a-zA-Z0-9]\S*$`)
+- `name` - Name of the mixin (pattern: `^[a-zA-Z0-9_]\S*$`)
 - `schemaUrl` - URL of the mixin schema (pattern: `^https?://[^\s/$.?#].\S*$`)
 - `required` - Boolean indicating if the mixin is required
 
