--- a/changelog/2025/2025-12-17-webhook.md
+++ b/changelog/2025/2025-12-17-webhook.md
@@ -33,5 +33,5 @@ There are no known problems.
 
 ## Links
 
-* [Events - Category Tree](https://developer.emporix.io/api-references/api-guides/webhooks/webhook-events/events-category)
+* [Events - Category Tree](https://app.gitbook.com/s/d4POTWomuSS7d3dnh4Dg/api-guides/webhooks/webhook-events/events-category)
 
