--- a/changelog/2025/2025-12-17-category.md
+++ b/changelog/2025/2025-12-17-category.md
@@ -66,5 +66,5 @@ There are no known problems.
 
 ## Links
 
-- [Category Tutorial](https://app.gitbook.com/s/d4POTWomuSS7d3dnh4Dg/catalogs-and-categories/category-tree/category.md)
-- [Classification Tutorial](https://app.gitbook.com/s/d4POTWomuSS7d3dnh4Dg/catalogs-and-categories/category-tree/classification.md)
+- [Category Tutorial](https://app.gitbook.com/o/z8MNPigQv25NZe33g3AV/s/d4POTWomuSS7d3dnh4Dg/api-guides/catalogs-and-categories/category-tree/category#classification)
+- [Classification Tutorial](https://app.gitbook.com/o/z8MNPigQv25NZe33g3AV/s/d4POTWomuSS7d3dnh4Dg/api-guides/catalogs-and-categories/category-tree/classification)
